--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
