--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
