--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "apexcharts": "^3.51.0",
     "axios": "^1.7.2",
     "ckeditor4-react": "^5.0.0",
     "ckeditor5": "^42.0.1",
@@ -22,6 +23,7 @@
     "framer-motion": "^11.2.10",
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
