--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.10",
+    "fuse.js": "^7.0.0",
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
