--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.10",
     "fuse.js": "^7.0.0",
+    "i18n": "^0.15.1",
+    "i18next": "^23.13.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -30,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
