--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "katsute.code-background"
+        "katsute.code-background",
+        "wakatime.vscode-wakatime"
     ]
 }
